--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build HTML5
         run: |
-          ./dita-ot/bin/dita -i ditamap/dataclean.ditamap -f html5 -o out/html5
+          ./dita-ot/bin/dita -i dataclean.ditamap -f html5 -o out/html5
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
