--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,12 @@ jobs:
           unzip dita-ot-4.2.zip
           mv dita-ot-4.2 dita-ot
 
+      - name: Install Bootstrap plugin
+        run: ./dita-ot/bin/dita install https://github.com/jason-fox/dita-bootstrap/archive/refs/heads/master.zip
+
       - name: Build HTML5
         run: |
-          ./dita-ot/bin/dita -i dataclean.ditamap -f html5 -o out/html5
+          ./dita-ot/bin/dita -i dataclean.ditamap -f html5-bootstrap -o out/html5
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
