--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,13 @@ jobs:
           -o out/html5 \
           -Dargs.output.relative=true \
 
+      - name: Copy Bootstrap CSS/JS to root
+        run: |
+          mkdir -p out/html5/style
+          mkdir -p out/html5/script
+          cp -r out/html5/plugins/net.infotexture.dita-bootstrap/style/* out/html5/style/
+          cp -r out/html5/plugins/net.infotexture.dita-bootstrap/script/* out/html5/script/
+
       - name: Create index.html redirect
         run: |
           echo '<!DOCTYPE html>
