--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,20 @@ jobs:
       - name: Rename toc.html to index.html
         run: cp out/html5/toc.html out/html5/index.html
 
+      - name: Update HTML to use CDN Bootstrap
+        run: |
+          for file in out/html5/*.html; do
+            # Supprime les <link> et <script> vers common-*.css/js
+            sed -i '/common.*\.css/d' "$file"
+            sed -i '/css-theme-switcher/d' "$file"
+            sed -i '/lunr-client/d' "$file"
+            # Ajoute les liens CDN après <head>
+            sed -i '/<head>/a \
+            <link rel="stylesheet" href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css\" crossorigin=\"anonymous\">\
+            <link rel="stylesheet" href=\"https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css\" crossorigin=\"anonymous\">\
+            <script src=\"https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js\" crossorigin=\"anonymous\"></script>' "$file"
+            done
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
