--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,10 @@ jobs:
           unzip dita-ot-4.2.zip
           mv dita-ot-4.2 dita-ot
 
-      - name: Install Bootstrap plugin
-        run: ./dita-ot/bin/dita install net.infotexture.dita-bootstrap
+      - name: Install DITA-OT plugins
+        run: |
+          ./dita-ot/bin/dita install fox.jason.extend.css
+          ./dita-ot/bin/dita install net.infotexture.dita-bootstrap
 
       - name: Build HTML5
         run: |
@@ -38,6 +40,21 @@ jobs:
 
       - name: Rename toc.html to index.html
         run: cp out/html5/toc.html out/html5/index.html
+
+      - name: Update HTML to use CDN Bootstrap
+        run: |
+          cat <<'EOF' > /tmp/cdn.html
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" integrity="sha384-CK2SzKma4jA5H/MXDUU7i1TqZlCFaD4T01vtyDFvPlD97JQyS+IsSh1nI2EFbp" crossorigin="anonymous">
+          EOF
+
+          for file in out/html5-bootstrap/*.html; do
+            sed -i '/common.*\.css/d' "$file"
+            sed -i '/css-theme-switcher/d' "$file"
+            sed -i '/lunr-client/d' "$file"
+            sed -i '/<head>/r /tmp/cdn.html' "$file"
+          done
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
