--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" integrity="sha384-CK2SzKma4jA5H/MXDUU7i1TqZlCFaD4T01vtyDFvPlD97JQyS+IsSh1nI2EFbp" crossorigin="anonymous">
           EOF
 
-          for file in out/html5-bootstrap/*.html; do
+          for file in out/html5/*.html; do
             sed -i '/common.*\.css/d' "$file"
             sed -i '/css-theme-switcher/d' "$file"
             sed -i '/lunr-client/d' "$file"
